# infra-documenter-ai

./: .env.template  .gitignore  generate_docs.py  promtps.py  pyproject.toml
docs/: README.md
